September 2022 8.1
  - Fixed bugs:
   -> PHP 8.1 does not show proper error message when login failed with LDAP search method

29.06.2022 8.0.1
  - Fixed bugs:
   -> Regression issues due to security fixes (e.g. module settings in server profile)
   -> Password change page not working for access level "Change passwords"


27.06.2022 8.0
  - PHP 8.1 compatibility
  - Extended user account status and locking options
  - Unix: added Gecos to profile editor
  - 389ds: added hints why login failed if account is locked/deactivated/expired
  - Removed Zarafa support (please switch to Kopano)
  - Tree view: display binary data as base64 encoded text
  - Tree view: better support for move operations and ordered attributes
  - LAM Pro:
   -> New captcha providers: hCaptcha and Friendly Captcha
   -> PPolicy: allow to specify unlock value for "pwdAccountLockedTime"
  - Fixed bugs:
   -> Hidden account is displayed (257)
   -> Change of RDN failed for OpenLDAP entries
   -> Tree view issues with browser auto-completion (176)
   -> Unauthenticated Arbitrary Object Instantiation / Unauthenticated Remote Code Execution (GHSA-r387-grjx-qgvw, CVE-2022-31084)
   -> Incorrect Default Permissions (GHSA-q8g5-45m4-q95p, CVE-2022-31087)
   -> Incorrect Regular Expressions (GHSA-q9pc-x84w-982x, CVE-2022-31086)
   -> Unauthenticated LDAP Injection (GHSA-wxf8-9x99-6gp4, CVE-2022-31088)
   -> Reflected XSS (Internet Explorer only) (GHSA-6m3q-5c84-6h6j, CVE-2022-31085)


15.04.2022 7.9.1
  - Fixed bugs:
   -> Security issues in PDF editor and profile editor (GHSA-f2fr-cccr-583v, CVE-2022-24851)


09.03.2022 7.9
  - Tree view:
   -> Support multiple roots (e.g. add "cn=config")
   -> Added function to check password hashes against a given password
  - Shadow: allow to set shadowLastChange in file upload
  - Docker: upgrade OS to Debian Bullseye
  - LAM Pro:
   -> Support multiple TO addresses for license expiration email