@@ -2981,6 +2981,32 @@ AuthorizedKeysCommandUser root</literallayout>
         </mediaobject>
       </screenshot>
     </section>
+
+    <section>
+      <title>Hosts</title>
+
+      <para>You can specify a list of valid host names where the group's members may
+        login. If you add the value "*" then the users may login to any host.
+        This can be further restricted by adding explicit deny entries which are
+        prefixed with "!" (e.g. "!hr_server").</para>
+
+      <para>Please note that your PAM settings need to support host
+        restrictions. This feature is enabled by setting <emphasis
+                role="bold">pam_check_host_attr yes</emphasis> in your <emphasis
+                role="bold">/etc/pam_ldap.conf</emphasis>. When it is enabled then the
+        account facility of pam_ldap will perform the checks and return an error
+        when no proper host attribute is present. Please note that users without
+        host attribute cannot login to such a configured server.</para>
+
+      <screenshot>
+        <mediaobject>
+          <imageobject>
+            <imagedata fileref="images/hostObjectGroup.png"/>
+          </imageobject>
+        </mediaobject>
+      </screenshot>
+    </section>
+
   </section>
 
   <section>
