@@ -581,7 +581,7 @@ function get_preg($argument, $regexp) {
 					$pregexpr = '/^([[:alnum:]#@\\/\\.\\ \\_\\$-])+$/u';
 					break;
 		case 'hostObject':
-					$pregexpr = '/^[!]?([[:alnum:]@\\.\\ \\_\\$\\*-])+$/u';
+					$pregexpr = '/^[!]?([[:alnum:]@\\.\\ \\_\\$\\:*-])+$/u';
 					break;
 		case 'usernameList':	// comma separated list of user names
 		case 'groupnameList':	// comma separated list of group names
